@@ -91,7 +91,7 @@ pyGcomprisPropertiesType_getattr(pyGcomprisPropertiesObject *self, char *name)
       }
     }
     /* enum */
-    if(strcmp(name,"sreensize")==0) return Py_BuildValue("i", self->cdata->screensize);
+    if(strcmp(name,"screensize")==0) return Py_BuildValue("i", self->cdata->screensize);
 
     /* enum */
     if(strcmp(name,"defaultcursor")==0) return Py_BuildValue("i", self->cdata->defaultcursor);
